src/test/deca/codegen/invalid/sansObjet/mod0.deca
// Description : Test with a modulo by zero
// Error : Division or modulo by 0 at execution

{
    int x = 2;
    int y = 0;
    int z = x%y;
}
